--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.4",
     "@astrojs/check": "^0.5.9",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/kode-mono": "^5.0.1",
+    "@fontsource-variable/roboto-mono": "^5.0.18",
+    "@fontsource/kode-mono": "^5.0.1",
+    "astro": "^4.5.4",
+    "intersection-observer": "^0.12.2",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   }
 }
