--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "intersection-observer": "^0.12.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "tailwindcss-animated": "^1.0.1"
   }
 }
